# chess-pgn-replay

./: .gitignore  CMakeLists.txt  README.md  basic.pgn  board.h  chess_replay.cpp  common.h  moves.h  parser.h  scanner.h  tests.cpp  tokens.h
data/: game1  very_basic.pgn
test/: CMakeLists.txt  basic_test.cpp
